# Bevy-KISSING-Godot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: generate_website.yml
addons/SomeRanDev.BevyKissingGodot/: export_plugin.gd.uid  plugin.cfg
addons/SomeRanDev.BevyKissingGodot/GDScript/: ComponentDialog.gd  ComponentDialog.gd.uid  ComponentEditor.gd  ComponentEditor.gd.uid  ComponentProperty.gd.uid  InspectorPlugin.gd  Plugin.gd  Plugin.gd.uid  Utils.gd  Utils.gd.uid
addons/SomeRanDev.BevyKissingGodot/Scenes/: ComponentDialog.tscn  ComponentEditor.tscn  ComponentProperty.tscn
bevy_kissing_godot/: Cargo.toml  build.rs
bevy_kissing_godot/src/: bevy_entity_ready.rs  entity_or_node_id.rs  kissing_app.rs  kissing_registry.rs  lib.rs  prelude.rs  scedules.rs  types.rs
bevy_kissing_godot/src/components/: gd_tracker_id.rs  godot_node.rs  godot_node_id.rs  mod.rs
bevy_kissing_godot/src/events/: add_child.rs  error.rs  mod.rs  queue_free.rs  remove_child.rs  run_code_on_node.rs  run_code_on_node_with_params.rs  set_godot_property.rs  set_position_3d.rs  set_rotation_3d.rs  set_scale_3d.rs  utils.rs
bevy_kissing_godot/src/extensions/: entity.rs  mod.rs  scene_tree.rs  variant.rs
bevy_kissing_godot/src/kissing_component/: kissing_component.rs  kissing_component_bridge.rs  kissing_component_data.rs  kissing_component_field.rs  kissing_component_registry.rs  mod.rs
bevy_kissing_godot/src/kissing_event/: kissing_event.rs  kissing_event_bridge.rs  kissing_event_callbacks.rs  kissing_event_data.rs  mod.rs
bevy_kissing_godot/src/kissing_node/: kissing_node.rs  mod.rs
bevy_kissing_godot/src/nodes/: command_queue_node.rs  mod.rs  tree_responder.rs
bevy_kissing_godot/src/plugins/: kissing_core_plugin.rs  kissing_event_plugin.rs  kissing_input_plugin.rs  mod.rs  node_triggerables.rs
bevy_kissing_godot/src/resources/: all_nodes.rs  entity_preregister.rs  gd_handle.rs  gd_tracker.rs  godot_thread_ensurer.rs  input_event_argument.rs  mod.rs  physics_process_delta.rs  process_delta.rs
bevy_kissing_godot_macros/: Cargo.toml
bevy_kissing_godot_macros/src/: get_compilation_timestamp.rs  kiss_bevy.rs  kiss_node.rs  kissing_component.rs  kissing_component_derive.rs  kissing_event_derive.rs  kissing_node_derive.rs  lib.rs  plugin_and_kissing_component.rs  utils.rs
bevy_kissing_godot_macros/src/arguments/: mod.rs  node_identifier_argument.rs
bevy_kissing_godot_macros/src/kiss_bevy/: kiss_bevy_impl.rs  mod.rs  node_identifier_argument.rs
bevy_kissing_godot_macros/src/kissing_component/: generate_component_impl.rs  generate_component_struct.rs  generate_godot_object_struct.rs
documentation/book/: AdditionalCode.js  AdditionalThemes.css  book.toml
documentation/book/src/: SUMMARY.md  bevy_entity_ready.md  components.md  entry_function.md  events.md  how_it_works.md  intro.md  (+5 more)
documentation/website/: index.html
(+34 files in other folders)
