[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Maybee Rezbit <SomeRanDev.Contact@gmail.com>"]
repository = "https://github.com/SomeRanDev/Bevy-KISSING-Godot"
keywords = ["godot", "bevy"]
categories = ["game-development"]
license = "MPL-2.0"

[workspace]
members = [
  "bevy_kissing_godot",
  "bevy_kissing_godot_macros"
]
resolver = "2"

[workspace.dependencies]
godot = { version = "0.4.5" }
bevy = { version = "0.18", default-features = false }
bevy_kissing_godot_macros = { version = "2.0.0", path = "bevy_kissing_godot_macros" }
